26-03-2022 code add list update delete in HomeScreen.js

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
+
+.menu_main{
+  background-color: rgb(8, 6, 12);
+}
+
+.menu_item{
+  padding: 15px;
+  display: inline-block;
+  color: #FFF;
+  font-size: 18px;
+  text-decoration: none;
+}
+.menu_item:hover{
+  background-color: #cebfbf;
+}
+
 .App {
   text-align: center;
 }
